# Federflink

./: .gitignore  LICENSE  README.md  start.sh
backend/: pyproject.toml
backend/app/: config.py  dispatcher.py  fehler.py  main.py  registry.py
backend/app/ergaenzungs_engines/: llm_engine.py  ngram_engine.py  trie_engine.py
backend/app/lernen/: frequenz.py  kontext_speicher.py  ngramm_speicher.py  telemetrie.py  tokens.py  umlaut.py  woerterbuch.py
backend/app/modelle/: ergaenzung.py  gemeinsam.py  profil.py  pruefung.py  system.py  woerterbuch.py
backend/app/persistence/: db.py  schema.py
backend/app/profile/: dienst.py  standard.py
backend/app/pruef_engines/: hunspell_engine.py  languagetool_engine.py
backend/app/routers/: complete.py  correct.py  learn.py  profile.py  satz.py  spellcheck.py  system.py  woerterbuch.py
backend/app/schnittstellen/: ergaenzungs_engine.py  pruef_engine.py
backend/app/services/: korrektur.py  llm_client.py  pruefung.py  satz.py
backend/tests/: conftest.py  test_phase1_pruefung.py  test_phase2_ergaenzung.py  test_phase3_llm.py  test_phase4_kontext.py  test_phase7_satz.py  test_phase8_umlaut.py
backend/tools/: hole_woerterbuch.py
docs/: 00_UEBERBLICK.md  01_ARCHITEKTUR.md  02_API.md  03_ENGINES.md  04_LERNEN.md  05_PROFILE_UND_KONFIG.md  06_BROWSER_PLUGIN.md  07_CLIENT_INTEGRATION.md  08_DEPLOYMENT_PI.md  09_MODELLE.md  README.md
extension/: README.md  manifest.json
extension/shared/: defaults.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
(+24 files in other folders)
