[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "federflink-backend"
description = "Backend des Rechtschreib- und Textergaenzungs-Servers Federflink"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "spylls>=0.1.7",
]

[project.optional-dependencies]
# LanguageTool ist optional (Java-Abhaengigkeit). Ohne dieses Extra laeuft
# Federflink mit Hunspell + LLM; die Grammatik-Engine meldet sich dann inaktiv.
grammatik = [
    "language-tool-python>=2.8",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.setuptools]
packages = { find = { include = ["app*"] } }

[tool.setuptools.dynamic]
version = { attr = "app.config.APP_VERSION" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
